LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artificial juridical person</fullName>
            </value>
            <value>
                <fullName>Association of persons</fullName>
            </value>
            <value>
                <fullName>Banking Company</fullName>
            </value>
            <value>
                <fullName>Body of Individuals</fullName>
            </value>
            <value>
                <fullName>Co-operative Society</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Public Ltd.</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Public Ltd. by Guarantee</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Public Ltd.-Listed India</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Public Ltd. - Listed India &amp; overseas</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Public Ltd. - PSU</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Pvt. Ltd.</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Pvt. Ltd. by Guarantee</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Pvt. Ltd. - subsidiary of Foreign Co.</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Pvt. Ltd. - subsidiary of Public Ltd. Co.</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Pvt. Unlimited Liability</fullName>
            </value>
            <value>
                <fullName>Domestic Co. - Section 25</fullName>
            </value>
            <value>
                <fullName>Foreign Co.- Grant Thornton member entity</fullName>
            </value>
            <value>
                <fullName>Foreign Co. - Indian Branch</fullName>
            </value>
            <value>
                <fullName>Foreign Co. - Indian Liaison</fullName>
            </value>
            <value>
                <fullName>Foreign Co. - Indian Project</fullName>
            </value>
            <value>
                <fullName>Foreign Co.- only foreign operations</fullName>
            </value>
            <value>
                <fullName>Foreign Co -Listed non-US</fullName>
            </value>
            <value>
                <fullName>Foreign Co -Listed US</fullName>
            </value>
            <value>
                <fullName>Foreign company unlisted</fullName>
            </value>
            <value>
                <fullName>Government Authority</fullName>
            </value>
            <value>
                <fullName>Government – Foreign</fullName>
            </value>
            <value>
                <fullName>Government – Indian</fullName>
            </value>
            <value>
                <fullName>Hindu Undivided Family</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>