LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Entity_Type_Master__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Type</label>
    <referenceTo>Entity_Type_Master__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>