LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <label>Entity Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>