LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Existing_service_providers__c.field-meta.xml
<CustomField>
    <fullName>Existing_service_providers__c</fullName>
    <label>Existing service providers</label>
    <type>TextArea</type>
</CustomField>