LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/External_Database_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Database_Source__c</fullName>
    <label>External Database Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>CapIQ</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>None of them</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>