LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Former_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Former_Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Former Key Account</label>
    <type>Checkbox</type>
</CustomField>