LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Formerly_known_as_1__c.field-meta.xml
<CustomField>
    <fullName>Formerly_known_as_1__c</fullName>
    <label>Formerly known as (1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>