LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Formerly_known_as_3__c.field-meta.xml
<CustomField>
    <fullName>Formerly_known_as_3__c</fullName>
    <label>Formerly known as (3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>