LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Formerly_Known_As__c.field-meta.xml
<CustomField>
    <fullName>Formerly_Known_As__c</fullName>
    <label>Formerly Known As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>