LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Global_Ultimate_Owner_GUO__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Owner_GUO__c</fullName>
    <label>Global Ultimate Owner (GUO)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>