LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Global_Ultimate_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Owner_ID__c</fullName>
    <label>Global Ultimate Owner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>