LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Growth_Potential_Of_Client__c.field-meta.xml
<CustomField>
    <fullName>Growth_Potential_Of_Client__c</fullName>
    <label>Growth Potential Of Client</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>