LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/GT_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>GT_Client_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GT Client Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account does not exist or is not a GT Client</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>GT Client Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients1</relationshipName>
    <type>Lookup</type>
</CustomField>