LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/GT_Employee__c.field-meta.xml
<CustomField>
    <fullName>GT_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GT Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients8</relationshipName>
    <type>Lookup</type>
</CustomField>