LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/GT_Member_Firms__c.field-meta.xml
<CustomField>
    <fullName>GT_Member_Firms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GT Member Firms</label>
    <referenceTo>InboundReferral__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>