LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Gx_Platinum_Gx_Gold_Cx__c.field-meta.xml
<CustomField>
    <fullName>Gx_Platinum_Gx_Gold_Cx__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>