LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Industry_CAP_IQ_MCA__c.field-meta.xml
<CustomField>
    <fullName>Industry_CAP_IQ_MCA__c</fullName>
    <label>Industry (CAP IQ/MCA)</label>
    <type>TextArea</type>
</CustomField>