LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/IntroHive__Account_RS_Val__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Account_RS_Val__c</fullName>
    <description>This value represents the statistical average of all your account contact&apos;s Relationship Strengths.</description>
    <label>Relationship Capital</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>