LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/IntroHive__Alternate_Name__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Alternate_Name__c</fullName>
    <description>HP Custom Field Testing</description>
    <label>Alternate Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>