LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/IntroHive__Introhive_Connections_Val__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Introhive_Connections_Val__c</fullName>
    <description>This is the number of potential introductions that exist in Introhive for this account</description>
    <label>Potential Introductions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>