LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/IntroHive__Introhive_Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Introhive_Last_Interaction__c</fullName>
    <description>This field displays the last date of interaction that is known to Introhive</description>
    <label>Last Interaction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>