LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/IntroHive__Introhive_Relationship_Capital_Change__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Introhive_Relationship_Capital_Change__c</fullName>
    <label>Relationship Capital Change</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>