LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/IntroHive__Synced_By__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Synced_By__c</fullName>
    <label>Created From Introhive By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>