LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Investors_Private_Equity_Firms__c.field-meta.xml
<CustomField>
    <fullName>Investors_Private_Equity_Firms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investors / Private Equity Firms</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Channels and Alliances</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type</field>
            <operation>equals</operation>
            <value>Channel</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients (Investors / Private Equity Firms)</relationshipLabel>
    <relationshipName>Clients6</relationshipName>
    <type>Lookup</type>
</CustomField>