LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Investors_Private_Equity_Firms_Contact__c.field-meta.xml
<CustomField>
    <fullName>Investors_Private_Equity_Firms_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investors / Private Equity Firms Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clients (Investors / Private Equity Firms Contact)</relationshipLabel>
    <relationshipName>Clients3</relationshipName>
    <type>Lookup</type>
</CustomField>