LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/is_Assigned_DS_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>is_Assigned_DS_Team_Member__c</fullName>
    <description>This field contains the information whether the current logged in user is the Assigned DS Team member or not. It is used in &quot;My Picked records&quot; list view to show the picked records to the DS Team members.</description>
    <formula>IF( Assigned_to_DS_Team_Member__c =  $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Assigned DS Team Member?</label>
    <type>Checkbox</type>
</CustomField>