LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Is_Client_GreyListed__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_GreyListed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to mark the client as Grey Listed</description>
    <label>Is Client GreyListed?</label>
    <type>Checkbox</type>
</CustomField>