LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Is_Client_Name_Chnage_is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_Name_Chnage_is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Client Name Chnage is Approved</label>
    <type>Checkbox</type>
</CustomField>