LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Is_Record_Type_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Type_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Record Type Change</label>
    <type>Checkbox</type>
</CustomField>