LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/IsClientGTMemberFirm__c.field-meta.xml
<CustomField>
    <fullName>IsClientGTMemberFirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Client GT Member Firm</label>
    <type>Checkbox</type>
</CustomField>