LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/ISIN_Number__c.field-meta.xml
<CustomField>
    <fullName>ISIN_Number__c</fullName>
    <label>ISIN Number</label>
    <type>TextArea</type>
</CustomField>