LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/IsNameChange__c.field-meta.xml
<CustomField>
    <fullName>IsNameChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the Name change from update and sync button and restrict other</description>
    <label>Is Name Change</label>
    <type>Checkbox</type>
</CustomField>