LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Key_Account_360__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Key Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GT Client Groups</relationshipLabel>
    <relationshipName>Clients2</relationshipName>
    <type>Lookup</type>
</CustomField>