LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Key_Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Category__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;Client&apos;, TEXT(GT_Client_Group__r.Key_Account_360__r.Client_Category__c), IF(RecordType.DeveloperName = &apos;GT_Client_Group&apos;,  TEXT( Key_Account_360__r.Client_Category__c ), NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account Category</label>
    <type>Text</type>
</CustomField>