LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Key_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Group__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+GT_Client_Group__r.Key_Account_360__c, GT_Client_Group__r.Key_Account_360__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account</label>
    <type>Text</type>
</CustomField>