LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Key_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Id__c</fullName>
    <formula>CASESAFEID(GT_Client_Group__r.Key_Account_360__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account Id</label>
    <type>Text</type>
</CustomField>