LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Key_Accountt__c.field-meta.xml
<CustomField>
    <fullName>Key_Accountt__c</fullName>
    <formula>GT_Client_Group__r.Key_Account_360__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account Name</label>
    <type>Text</type>
</CustomField>