LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Last_Client_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Activity_Date_Time__c</fullName>
    <label>Last Client Activity Date Time</label>
    <type>DateTime</type>
</CustomField>