LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Last_MOM_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_MOM_Updated_Time__c</fullName>
    <label>Last MOM Updated Time</label>
    <type>DateTime</type>
</CustomField>