LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Channels and Alliances</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type</field>
            <operation>equals</operation>
            <value>Channel</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients (Law Firm)</relationshipLabel>
    <relationshipName>Clients7</relationshipName>
    <type>Lookup</type>
</CustomField>