LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/LegacyData__c.field-meta.xml
<CustomField>
    <fullName>LegacyData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Data</label>
    <type>Checkbox</type>
</CustomField>