LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/LegalEntityType__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityType__c</fullName>
    <label>Legal Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Listed</fullName>
            </value>
            <value>
                <fullName>Pvt. Listed</fullName>
            </value>
            <value>
                <fullName>Public Not Listed</fullName>
            </value>
            <value>
                <fullName>Pvt. Not Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>