LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/NatureOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>NatureOfBusiness__c</fullName>
    <label>Nature Of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>