LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Net_Promoter_Score__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score__c</fullName>
    <inlineHelpText>Promoter % - Detractor %</inlineHelpText>
    <label>Net Promoter Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>