LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/NetProfit_InCr__c.field-meta.xml
<CustomField>
    <fullName>NetProfit_InCr__c</fullName>
    <label>Net Profit (In Cr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>