LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/New_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Id__c</fullName>
    <description>New Client Id</description>
    <label>New Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>