LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/NewClientName__c.field-meta.xml
<CustomField>
    <fullName>NewClientName__c</fullName>
    <label>New Client Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>