LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/NewSMEsIntroduced__c.field-meta.xml
<CustomField>
    <fullName>NewSMEsIntroduced__c</fullName>
    <label>New SMEs Introduced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>