LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/OperatingProfit_inCr__c.field-meta.xml
<CustomField>
    <fullName>OperatingProfit_inCr__c</fullName>
    <label>Operating Profit (in Cr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>