LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Pan_No__c.field-meta.xml
<CustomField>
    <fullName>Pan_No__c</fullName>
    <label>Pan No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>