LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Passive__c.field-meta.xml
<CustomField>
    <fullName>Passive__c</fullName>
    <inlineHelpText>Passive percentage of survey related to this client.</inlineHelpText>
    <label>Passive</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>