LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/PipelineConversion__c.field-meta.xml
<CustomField>
    <fullName>PipelineConversion__c</fullName>
    <label>Pipeline Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>