LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/PotentialGrowth__c.field-meta.xml
<CustomField>
    <fullName>PotentialGrowth__c</fullName>
    <formula>TotalProbability__c /   TotalNoOfOpportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>