LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <inlineHelpText>Promoter percentage of survey related to this client.</inlineHelpText>
    <label>Promoter</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>