LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Proposed_Account_Owner_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Account_Owner_Approval_Status__c</fullName>
    <label>Proposed Account Owner Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>