LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Proposed_Co_CSL__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Co_CSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Co-CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients2</relationshipName>
    <type>Lookup</type>
</CustomField>