LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Proposed_CSL__c.field-meta.xml
<CustomField>
    <fullName>Proposed_CSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients1</relationshipName>
    <type>Lookup</type>
</CustomField>