LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Public_Private_Company__c.field-meta.xml
<CustomField>
    <fullName>Public_Private_Company__c</fullName>
    <label>Public/Private Company</label>
    <type>TextArea</type>
</CustomField>