LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Rationale_to_make_Key_Client__c.field-meta.xml
<CustomField>
    <fullName>Rationale_to_make_Key_Client__c</fullName>
    <label>Rationale to make Key Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>