LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/RCCCurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>RCCCurrentStatus__c</fullName>
    <label>RCC Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>NotInitiated</fullName>
                <label>Not Initiated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>