LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Inactive Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>