LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Referral_Channel__c.field-meta.xml
<CustomField>
    <fullName>Referral_Channel__c</fullName>
    <label>Referral Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>