LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Referral_Client__c.field-meta.xml
<CustomField>
    <fullName>Referral_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients (Referral_Client__c)</relationshipLabel>
    <relationshipName>Clients8</relationshipName>
    <type>Lookup</type>
</CustomField>