LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Referred_by_Chamber__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Chamber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred by Chamber</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Type</field>
            <operation>equals</operation>
            <value>Chamber</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Channels and Alliances</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients (Referred by Chamber)</relationshipLabel>
    <relationshipName>Clients4</relationshipName>
    <type>Lookup</type>
</CustomField>